[package]
name = "qado_sparql_validator"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "^0.12.7", features = ["blocking", "json"]}
serde = {version = "^1.0.206", features = ["derive"]}
serde_json = "^1.0.122"
clap = {version = "4.5.20", features = ["derive"]}
chrono = "^0.4.38"
threadpool = "^1.8.1"
indicatif = "0.17.8"
